--- a/package.json
+++ b/package.json
@@ -1,18 +1,43 @@
 {
-  "name": "p-manager",
+  "name": "p-mng",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev-start": "nodemon index.js",
+    "test:watch": "nodemon --exec 'npm test'",
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": ">=20",
+    "npm": ">=10.8.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test"
+    }
   },
   "keywords": [],
-  "author": "",
+  "author": "@raybags-dev",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "nodemon": "^3.1.9"
   },
   "dependencies": {
-    "dotenv": "^16.4.7"
+    "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "kleur": "^4.1.5",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.3",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.16",
+    "sharp": "^0.33.5",
+    "uuid": "^11.0.4",
+    "winston": "^3.17.0"
   }
 }
