--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "kleur": "^4.1.5",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
     "morgan": "^1.10.0",
